story-wrap fix

--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -121,7 +121,7 @@
   }
 }
 .story, .tile-textbelow {
-  .story-wrap {
+  .story-wrap, .story-wrap-feature {
 
     .pub-date {
       color:            $col-red;
@@ -156,7 +156,7 @@
   padding:              0;
   min-height:           360px;
 
-  .story-wrap {
+  .story-wrap, .story-wrap-feature {
     //height:             400px;
     color:              $col-white;
     background-size:    cover;
@@ -407,7 +407,7 @@
     }
   }
 }
-carouselPromo {
+#carouselPromo, .carouselPromo {
   padding-bottom: 0 !important;
 }
 
